*** Version 2.7.05      (28 novembre 2017)   ***
- Améliorations
Absences récurrentes : Les règles de récurrences sont stockées dans la base de données 

*** Version 2.7.04      (22 novembre 2017)   ***
- Améliorations
Absences : Enregistrement d'absences récurrentes

*** Version 2.7.03      (25 octobre 2017)   ***
- Améliorations
ICS : permet l'importation des événements non-confirmés. Ceux-ci sont importés comme des absences non-validées.
ICS : permet l'utilisation du champ "matricule" dans les openURL d'importation. Peut être utilisé pour importer des fichiers ICS nommés avec l'identifiant Harpege par exemple.

*** Version 2.7.02      (12 octobre 2017)   ***
- Améliorations
Planning : Amélioration de la mise en surbrillance des agents dans le planning

*** Version 2.7.01      (7 octobre 2017)   ***
- Améliorations
Planning : Met en surbrillance les agents survolés dans le menu
Planning : Dissociation des droits de modification des plannings : un droit permet de créer, modifier, enregistrer et utiliser les modèles, un autre permet uniquement la modification des plannings
Importation ICS : cases à cocher pour autoriser ou refuser l'importation des calendriers ICS agent par agent.
Statistiques : Choix des créneaux horaires à afficher dans les statistiques
Absences : Ajoute un droit permettant aux non-admin d'ajouter des absences pour plusieurs agents
Absences : Permet l'enregistrement d'absences qui se chevauchent, avec avertissement
Absences : Permet la sélection de tous les agents lors de l'enregistrement des absences (paramètre Absences / Absences-tous)

- Corrections
Encodage HTML des caractères dans la base de données, tables acces, config et menu
Conversion en base64 des mot de passes cryptés (fonctions encrypt / descrypt)
Affichage des agents, initialisation du filtre Service Public / Administratif
Affichage des agents, corrige une erreur de script empêchant l'affichage des fiches agents